<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flyout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/flyout_menu"
        android:layout_width="@dimen/flyout_menu_width"
        android:layout_height="match_parent"
        android:background="@color/emphasis"
        android:orientation="vertical"
        android:translationX="@dimen/flyout_menu_width_negative"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/client_name"
            style="@style/flyoutItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/emphasis_light" />

        <ImageView
            android:id="@+id/avatar"
            style="@style/flyoutItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/avatar"
            android:src="@drawable/avatar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/emphasis_light" />

        <TextView
            android:id="@+id/page_menu"
            style="@style/flyoutItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_menu" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/emphasis_light" />

        <TextView
            android:id="@+id/page_orders"
            style="@style/flyoutItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_orders" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/emphasis_light" />

        <TextView
            android:id="@+id/page_settings"
            style="@style/flyoutItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_settings" />

    </LinearLayout>

    <include layout="@layout/activity_container" />
</FrameLayout>